fix css horizontal scroll mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -622,7 +622,6 @@ p .fa-info {
     .activities {
         padding-left: 20px;
         padding-right: 20px;
-        margin: 50px 0px 50px 10px;
         width: 100%;
     }
 
